crates/reinhardt-pages/tests/ui/client_form/choices/fail/directional_rename.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, Default, PartialEq, ClientFormChoices)]
enum ProviderMode {
	#[default]
	#[serde(rename(serialize = "wire_api", deserialize = "legacy_api"))]
	ApiMode,
}

fn main() {}
