crates/reinhardt-pages/tests/ui/client_form/choices/fail/directional_rename.stderr
error: ClientFormChoices requires matching serde serialize and deserialize names for each choice
 --> tests/ui/client_form/choices/fail/directional_rename.rs:7:2
  |
7 |     ApiMode,
  |     ^^^^^^^
